--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ nltk
 numpy
 omegaconf
 openai
-opencv-python>=4.7.0.72
+opencv-python-headless>=4.7.0.72
 openpyxl
 pandas
 pillow
@@ -34,7 +34,7 @@ timm
 torch
 torchvision
 tqdm
-transformers
+transformers==4.37.0
 typing_extensions
 validators
 xlsxwriter
